# ConwaysGameOfLife

./: CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.hpp  Pattern.hpp  PatternAcorn.hpp  PatternBlinker.hpp  PatternBlock.hpp  PatternGlider.hpp  PatternGosperGliderGun.hpp  RendererConsole.cpp  RendererConsole.hpp  main.cpp
